<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <TextView
            android:id="@+id/tv_file_download_instruction"
            android:textSize="16sp"
            android:textColor="@color/tx_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/divider"/>

        <TextView
            android:id="@+id/tv_url_correct_label"
            android:text="@string/file_download_url_correct"
            android:textSize="14sp"
            android:textColor="@color/tx_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_url_correct"
            android:textSize="15sp"
            android:textColor="@color/tx_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_file_download_0"
            android:onClick="onClickFileDownload_0"
            android:text="@string/file_download_button_download"
            android:textSize="16sp"
            android:textColor="@color/tx_white"
            android:background="@drawable/bk_main_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tv_url_fault_label"
            android:text="@string/file_download_url_fault"
            android:textSize="14sp"
            android:textColor="@color/tx_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_url_fault"
            android:textSize="15sp"
            android:textColor="@color/tx_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_file_download_1"
            android:onClick="onClickFileDownload_1"
            android:text="@string/file_download_button_download"
            android:textSize="16sp"
            android:textColor="@color/tx_white"
            android:background="@drawable/bk_main_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_file_download"
        android:visibility="gone"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_centerInParent="true"/>

</RelativeLayout>